Issue #3806: added text wrapping for long dynamic field labels

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
@@ -642,6 +642,7 @@ fieldset.TableLike .Row > .FieldCell label:not(.ck-label) {
     padding-top: 0.3em;
     padding-bottom: 1px;
     text-shadow: 0 1px 0 var(--colBGLightMedium);
+    text-wrap: wrap;
 }
 
 fieldset.TableLike .Row.MultiColumn > .FieldCell label {
